--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
+    "firebase": "^9.6.7",
     "next": "latest",
+    "next-auth": "^4.2.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-dropdown": "^1.9.2",
+    "react-textarea-autosize": "^8.3.3"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
