--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
-    "react-textarea-autosize": "^8.3.3"
+    "react-textarea-autosize": "^8.3.3",
+    "react-top-loading-bar": "^2.1.0"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
