--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "@heroicons/react": "^1.0.5",
     "firebase": "^9.6.7",
-    "next": "latest",
+    "next": "^12.1.0",
     "next-auth": "^4.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -20,6 +20,8 @@
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.0",
+    "eslint": "8.9.0",
+    "eslint-config-next": "12.1.0",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
