--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,9 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": [ "next/core-web-vitals"],
+  "react/jsx-key": "off"
+}
+
+{
+  "extends": ["next", "next/core-web-vitals"],
+  "react/jsx-key": "off"
 }
